Fixat massa tempus och verb

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -301,7 +301,7 @@ In optician's terms a minus glass is a lens that focuses light coming further aw
 \caption{Angular magnification at short distances\label{angular}}
 \end{figure}
 
-Though using lenses is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. The magnification is a problem in visual acuity testing because if the optotypes on the eye chart are enlarged then an error will show up in the results.
+Though using lenses is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. The magnification is a problem in visual acuity testing because if the optotypes on the eye chart are enlarged then an error shows up in the results.
 
 \newpage
 \begin{figure}[h]
@@ -513,22 +513,15 @@ The server application is written in Java and uses the built-in \textit{Swing} l
 
 The rendering of images, specifically SVG vector graphic images, is handled by an \textit{~Apache} library called \textit{Batik}. It is a well supported and extensive library for rendering a multitude of different file formats. The SVG files contain information about the optotypes used on the charts. Using the same procedure as the tablet application to calculate the positions of the SVG images, we can easily create a well structured image to render to the screen.
 
-%The server will also handle the networking on its side, connecting to the Android tablet over a TCP connection. This will be done using a third-party library \textit{Kryonet}. \cite{kryonet} Kryonet is a library that wraps Java's own networking functionality and improves upon it. The library's strong-point is the way it implements serialization of Java objects. Using Kryonet we can without a lot of effort serialize objects, send the object over the network and then deserialize is, getting back the original object with all of its internal structure. 
-
 When the networking part of the server receives information from the network it is submitted to a thread-safe queue. Separately from this, the GUI pulls the information from the queue and handles the information. This method is necessary because of how Swing is constructed. Swing runs on a dispatch-thread basis, meaning that there is a single event dispatching thread that handles all the incoming events and alters the GUI accordingly. Since the dispatch-thread decides when to update the screen attempting to alter the GUI from another thread simultaneously would result in unknown behaviour and possibly fatal errors, and is therefore prohibited. 
 
 \subsection{Network}
 The network communication between the client and the server consists of two parts. The first part is server detection and the second is server communication. All network communication are handled in threads separate from the main thread using Java's SwingWorker- and Androids AsyncTask class. Both classes allow us to perform network operations in the background, in a separate thread, and once the operations are complete the main thread of the program automatically gets the result.
 
-
 \subsubsection{Server detection}
 In order to detect all servers on the network, the Android application sends out a discovery request message, consisting of the string \\ \textit{AXANIVIS\_DISCOVER\_REQUEST}, 5 times with a 1 second interval using UDP (User Datagram Protocol) on the networks broadcast address using port 14141. The server, which constantly listen for broadcasts containing the correct message, then responds to that message with the message \textit{AXANIVIS\_DISCOVER\_RESPONSE\textbackslash nServerName}, again using UDP. Once the Android application receives a response it adds the server to a list. The optician can then choose to connect to one of the found servers or attempt the detection again if no servers were found.
 
 Since UDP is a connectionless protocol, there is no guarantee that the server actually receives the message, the discovery request message is sent 5 times, which means the server have 5 chances to receive the message and respond to it. This means that the server receives a discovery request 0 to 5 times and respond to it the same number of times. To avoid duplicate server entries in the list, a server is only added if it doesn't already exist in the list.
-
-%In order to detect all servers on the network, the Android application sends out a UDP (User Datagram Protocol) broadcast message containing server discovery request. The application will then listen for incoming server responses. Once the application haven't received anything for three seconds from the last server response, it will stop listening and determine that all available servers have responded. The names and addresses of the servers will then be extracted from each response message and stored in a list so the user can choose which one to connect to.
-
-%The servers themselves are constantly listening for broadcasts containing the server discovery request. Once a request is received, the server will send a response and then keep listening for more requests.
 
 \subsubsection{Server communication}
 The communication between the Android application and the connected server is handled using strings of characters divided to three lines using line separators. The first line consists of a check word, which is the same for every message. If this check word is wrong or doesn't exist, the server ignores the message. The second line is the command to the server. This could be a command to set the current chart type or size to something else. The third line is the data required for the command. The data can be empty (null) or a string of characters. Depending on the command, the string of characters can be read as either a sequence of ASCII characters or a sequence of numbers. The messages defined for the server communications are commands to connect to the server, set the distance from the screen and set which chart to be displayed with which optotype. If a message with an incorrect command is sent to the server, the server ignores that message. If the wrong data is sent together with a correct command, the server keeps functioning but its output is undefined.
@@ -781,15 +774,15 @@ Even though the system turned out as intended, there are things left to do befor
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This saves both time and space as only one screen, a small server and a small Android device is necessary, while also providing easier access to specialized charts that helps patients with different needs. This system also allows the visual acuity tests to take place in rooms that previously were too small, as the system displays optotypes at a size suitable for the distance the patient is from the monitor.
 
 \section{Disadvantages of a digital system}
-A disadvantage with this system is that digital screens become very expensive at large sizes, a 40 inch LED TV, for example, can cost above 3500 SEK as of 30/8-2015 according to Elgiganten. The screen size limits the maximum distance a patient can watch the screen and the patient should preferably sit at least 4 meters away from screen \cite{PGSoderbergOral}. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated which will make it harder to read the optotype and result in an incorrect result from the test \cite{PGSoderbergOral}. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be and the optotype will appear less pixelated.
+A disadvantage with this system is that digital screens become very expensive at large sizes, a 40 inch LED TV, for example, can cost above 3500 SEK as of 30/8-2015 according to Elgiganten. The screen size limits the maximum distance a patient can watch the screen and the patient should preferably sit at least 4 meters away from screen \cite{PGSoderbergOral}. Another disadvantage is that the resolution, or rather pixel density, limits how close to a screen a patient can sit without the optotypes looking pixelated which makes it harder to read the optotype and result in an incorrect result from the test \cite{PGSoderbergOral}. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details and the optotype appears less pixelated.
 
 \section{Alternative solutions}
 A possible alternative solution to a custom server running on a Raspberry Pi or other computer would be to use a Chromecast instead. This could simplify the system for the optician as this would make the Android application work similar to the many media streaming applications that exists today. Using a Chromecast would also make sure the optician only have to worry about the Android application as the Chromecast is just a plug and play unit maintained by Google. A disadvantage to this is that the developer is required to have a Google developers account which costs a small sum of money (5\$ as of August 2015). This might not be a large sum of money but it was decided to be left for future exploration. Another disadvantage of using the Chromecast is that the application would need an internet connection instead of just a local network. Although screen mirroring is possible, the logical solution to create this system would be to use the Chromecasts \textit{Custom Media Receiver} which requires a webbapp located on the internet \cite{android_receiver_app}.
 
 \section{Future Work}
-Future work will include more charts and features for the system. One such feature is the grating acuity test, which allows testing of visual acuity on very young children or people with difficulties communicating. The test consists of several vertical lines with different widths and distances from each other. These lines are moving horizontally on a screen and if the patient can distinguish the lines, the patients eyes will follow it. The eyesight can then be determined by looking on the thinnest line the patient can distinguish \cite{PGSoderbergOral}. Another feature is to include the option to, instead of changing the size of the optotypes, change the LogMAR values, so the top row doesn't necessarily start at 1.0 LogMAR. This way the server can calculate the largest size the top row optotypes can have and allow the chart to use the entire monitors screen no matter the distance from the patient to the screen.
+Future work includes more charts and features for the system. One such feature is the grating acuity test, which allows testing of visual acuity on very young children or people with difficulties communicating. The test consists of several vertical lines with different widths and distances from each other. These lines are moving horizontally on a screen and if the patient can distinguish the lines, the patients eyes follows them. The eyesight can then be determined by looking on the thinnest line the patient can distinguish \cite{PGSoderbergOral}. Another feature is to include the option to, instead of changing the size of the optotypes, change the LogMAR values, so the top row doesn't necessarily start at 1.0 LogMAR. This way the server can calculate the largest size the top row optotypes can have and allow the chart to use the entire monitors screen no matter the distance from the patient to the screen.
 
-Other charts to be included could be, for example, charts using the Landholt C, charts for testing color blindness or charts used for testing astigmatism. The random function for the charts should be improved with constraints, as it currently has none. These constraints would make sure that the same optotype, or to similar optotypes like \textit{C} and \textit{O}, will not be repeated too many times in a row.
+Other charts to be included could be, for example, charts using the Landholt C, charts for testing color blindness or charts used for testing astigmatism. The random function for the charts should be improved with constraints, as it currently has none. These constraints would make sure that the same optotype, or to similar optotypes like \textit{C} and \textit{O}, are not repeated too many times in a row.
 
 
 %\bibliography{references}{}
